{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 126,
  "lineage": "4ff457d9-38d8-3de7-9e53-a87558a2307a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9f1a3217f137a6a",
            "domain": "vpc",
            "id": "eipalloc-0e9f1a3217f137a6a",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-234-109-36.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.109.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "private-nat-ip-0"
            },
            "tags_all": {
              "Name": "private-nat-ip-0"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937184053936:internet-gateway/igw-0d47ddf813d2a0bee",
            "id": "igw-0d47ddf813d2a0bee",
            "owner_id": "937184053936",
            "tags": {
              "Name": "public-igw-0"
            },
            "tags_all": {
              "Name": "public-igw-0"
            },
            "vpc_id": "vpc-0f99737c6c92566ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My-VPC-DEV"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9f1a3217f137a6a",
            "connectivity_type": "public",
            "id": "nat-0699616341491b6a6",
            "network_interface_id": "eni-026b7dae38e55a3f2",
            "private_ip": "10.0.1.224",
            "public_ip": "13.234.109.36",
            "subnet_id": "subnet-0de076003fa8fdae9",
            "tags": {
              "Name": "private-nat-0"
            },
            "tags_all": {
              "Name": "private-nat-0"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.My-VPC-DEV"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937184053936:route-table/rtb-042079f7425a90f24",
            "id": "rtb-042079f7425a90f24",
            "owner_id": "937184053936",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0699616341491b6a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-subnet-route"
            },
            "tags_all": {
              "Name": "private-subnet-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f99737c6c92566ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.My-VPC-DEV"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937184053936:route-table/rtb-00d372fc9d4c6774c",
            "id": "rtb-00d372fc9d4c6774c",
            "owner_id": "937184053936",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0699616341491b6a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-subnet-route"
            },
            "tags_all": {
              "Name": "private-subnet-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f99737c6c92566ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.My-VPC-DEV"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937184053936:route-table/rtb-0e16246d01c9db3e8",
            "id": "rtb-0e16246d01c9db3e8",
            "owner_id": "937184053936",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d47ddf813d2a0bee",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-subnet-route"
            },
            "tags_all": {
              "Name": "public-subnet-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f99737c6c92566ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.My-VPC-DEV"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-routes-linking",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfd49a384930bec6",
            "route_table_id": "rtb-042079f7425a90f24",
            "subnet_id": "subnet-0c03f8d73a3356246"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.My-VPC-DEV"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a77b6db0e14238e5",
            "route_table_id": "rtb-00d372fc9d4c6774c",
            "subnet_id": "subnet-07d2f0f92ef2882c6"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.My-VPC-DEV"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8475c7afa3386f9",
            "route_table_id": "rtb-0e16246d01c9db3e8",
            "subnet_id": "subnet-0de076003fa8fdae9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.My-VPC-DEV"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a414d4ea3a01bc49",
            "route_table_id": "rtb-0e16246d01c9db3e8",
            "subnet_id": "subnet-0c33cea0bafbc397d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.My-VPC-DEV"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937184053936:subnet/subnet-0c03f8d73a3356246",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c03f8d73a3356246",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "937184053936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-0f99737c6c92566ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My-VPC-DEV"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937184053936:subnet/subnet-07d2f0f92ef2882c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d2f0f92ef2882c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "937184053936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0f99737c6c92566ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My-VPC-DEV"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937184053936:subnet/subnet-0de076003fa8fdae9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de076003fa8fdae9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "937184053936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-0f99737c6c92566ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My-VPC-DEV"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937184053936:subnet/subnet-0c33cea0bafbc397d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c33cea0bafbc397d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "937184053936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0f99737c6c92566ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My-VPC-DEV"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My-VPC-DEV",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937184053936:vpc/vpc-0f99737c6c92566ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00d1805f30b167f8c",
            "default_route_table_id": "rtb-0738f046babfedc14",
            "default_security_group_id": "sg-0eba63900b505ea37",
            "dhcp_options_id": "dopt-0d4d273d96f2d7019",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f99737c6c92566ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0738f046babfedc14",
            "owner_id": "937184053936",
            "tags": {
              "Name": "my-new-vpc"
            },
            "tags_all": {
              "Name": "my-new-vpc"
            }
          }
        }
      ]
    }
  ]
}